--- a/respo/itoken-service-redis-dev.yml
+++ b/respo/itoken-service-redis-dev.yml
@@ -16,7 +16,7 @@ spring:
         min-idle: 0
     sentinel:
       master: mymaster
-      nodes: 192.168.17.128:26379
+      nodes: 192.168.17.128:26379, 192.168.17.128:26380, 192.168.17.128:26381
 
 server:
   port: 8502
